# interview-ai-native-desktop-sandor-matyas

./: CLAUDE.md  CMakeLists.txt  take-home-exercises.md
examples/: generate-large-log.sh
src/: export.cpp  export.h  filter_engine.cpp  filter_engine.h  log_file.cpp  log_file.h  log_parser.cpp  log_parser.h  main.cpp  stats.cpp  stats.h  tab_manager.cpp  tab_manager.h
tests/: headless_main.cpp  test_export.cpp  test_filter_engine.cpp  test_integration.cpp  test_log_file.cpp  test_log_parser.cpp  test_stats.cpp  test_tab_manager.cpp
